--- a/students/sparrow925.Rmd
+++ b/students/sparrow925.Rmd
@@ -89,7 +89,7 @@ sparrow925_EUSO2_dplyr %T>%
 ```
 
 ***
-### Assignment 4: Tidy CO2 Emissions
+## 4. Tidying up Data
 _**Task 1**. Convert the following table [CO<sub>2</sub> emissions per country since 1970](http://edgar.jrc.ec.europa.eu/overview.php?v=CO2ts1990-2014&sort=des9) from wide to long format and output the first few rows into your Rmarkdown. I recommend consulting `?gather` and you should have 3 columns in your output._
 
 ```{r Assn4, eval=F}
@@ -113,10 +113,10 @@ library(readxl) # install.packages('readxl')
 xls = '../data/co2_europa.xls'
 co2=read_excel(xls, skip=12)
 
-gather
+#gather
 ```
 
 _**Task 2**. Report the top 5 emitting countries (not World or EU28) for 2014 using your long format table. (You may need to convert your year column from factor to numeric, eg `mutate(year = as.numeric(as.character(year)))`. As with most analyses, there are multiple ways to do this. I used the following functions: `filter`, `arrange`, `desc`, `head`)_. 
 
 _**Task 3**. Summarize the total emissions by country  (not World or EU28) across years from your long format table and return the top 5 emitting countries. (As with most analyses, there are multiple ways to do this. I used the following functions: `filter`, `arrange`, `desc`, `head`)_. 
-
+## 4. Answers and Tasks
