--- a/students/daalbu.Rmd
+++ b/students/daalbu.Rmd
@@ -19,7 +19,7 @@ output:
 #### <span style = "color:blue"> *Interests* </span>        
 
 I am interested in water resources, ecosystem health, and conservation management and am especially enthuastic about tools for data management. I believe good data management a fundemental skill that can be applied to both increasing work efficiency and exceling in a
-any scientific position where data is inovled...so basically, it has endless applications.    
+any scientific position where data is inovled...so basically, there are endless applications.    
 
 Here is a photo of me taking a water sample at one of my favorite locations on Earth: the Lyell Fork of the Tuolumne River.
 ![](images/lyell.jpg)        
@@ -46,6 +46,9 @@ summary(data)
 ```
 
 <small>Data for SWE sourced from [here](http://cdec.water.ca.gov/cgi-progs/queryWY?staid=TUM&sensor_num=3&wy=2016&span=7years)</small>
+
+## Data Wrangling
+
 
 
 
