--- a/wk05_ggplot/ggplot.Rmd
+++ b/wk05_ggplot/ggplot.Rmd
@@ -102,7 +102,7 @@ p1 = p1 + scale_fill_discrete(name="Thinning %")
 ```
 
 Not so pretty, but what if we look at mean over all possible startyears instead - averaging over climate variability
-```{r color}
+```{r aggregate}
 
 p1 = ggplot(thin, aes(x=as.factor(postyears), y=cpool)) + stat_summary(fun.y="mean", geom="bar")
 p1
@@ -113,7 +113,7 @@ p1 = ggplot(thin, aes(x=postyears, y=cpool, col=as.factor(thin))) + stat_summary
 ```
 
 Now lets try *facets* or different graphs and play a bit with aggregating data by summing
-```{r color}
+```{r facet}
 p2 = ggplot(thin, aes(x=postyears, y=cpool))+stat_summary(fun.y="mean", geom="line")
 p2= p2+facet_wrap(~thin)
 
