--- a/wk05_joining.Rmd
+++ b/wk05_joining.Rmd
@@ -102,7 +102,7 @@ if (wd %in% list.files() & interactive()){
 
 # ensure working directory
 if (basename(getwd()) != wd){
-  stop(sprintf("WHOAH! Your working directory is not in '%s'!\n   getwd(): %s", getwd(), wd))
+  stop(sprintf("WHOAH! Your working directory is not in '%s'!\n   getwd(): %s", wd, getwd()))
 }
 ```
 
@@ -188,13 +188,28 @@ anti_join(songs, artists, by = "name")
 
 ### per capita CO<sub>2</sub> emissions 
 
-You'll join the [gapminder](https://github.com/jennybc/gapminder) datasets to get world population per country.
+You'll join the [population](http://data.okfn.org/data/core/population) dataset to calculate per capita CO<sub>2</sub> emissions.
 
-_**Task**. Summarize the total emissions by country  (not World or EU28) per capita across years from your long format table and return the top 5 emitting countries. (As with most analyses, there are multiple ways to do this. I used the following functions: `filter`, `arrange`, `desc`, `head`)_. 
+_**Task**. Summarize the total emissions by country  (not World or EU28) per capita across years from your long format table and return the top 5 emitting countries for **2014**._
 
-```{r gapminder}
-library(gapminder) # install.packages('gapminder')
+_**Task**. Summarize the total emissions by country (not World or EU28) per capita across years from your long format table and return the top 5 emitting countries on **average** across all years._ 
+
+```{r read co2}
+library(dplyr)
+library(readxl) # install.packages('readxl')
+
+# xls downloaded from http://edgar.jrc.ec.europa.eu/news_docs/CO2_1970-2014_dataset_of_CO2_report_2015.xls
+xls = '../data/co2_europa.xls'
+
+print(getwd())
+co2 = read_excel(xls, skip=12)
+co2
 ```
 
+```{r popn}
+library(readr)
+library(tidyr)
 
-## TODO: lubridate, and stringr
+popn = read_csv(
+  'https://raw.githubusercontent.com/datasets/population/master/data/population.csv')
+```
