--- a/students/alxsmith.Rmd
+++ b/students/alxsmith.Rmd
@@ -179,9 +179,9 @@ help(package='EDAWR')
 ?cases     # subset of WHO tuberculosis
 ?pollution # pollution data from WHO Ambient Air Pollution, 2014
 ?tb        # tuberculosis data
-View(storms)
-View(cases)
-View(pollution)
+#View(storms)
+#View(cases)
+#View(pollution)
 ```
 
 ### slicing
@@ -211,9 +211,9 @@ storms$pressure / storms$wind
 # better yet
 library(dplyr)
 
-pollution %>%
-  filter(city != 'New York') %>%
-  mutate(
+#pollution %>%
+  #filter(city != 'New York') %>% ######why is this operator here?
+  mutate(storms,
     ratio = pressure / wind)
 ```
 
@@ -260,19 +260,14 @@ storms2
 unite(storms2, "date", year, month, day, sep = "-")
 ```
 
-**Recap: tidyr**:
-
-- A package that reshapes the layout of data sets.
-
-- Make observations from variables with `gather()` Make variables from observations with `spread()`
-
-- Split and merge columns with `unite()` and `separate()`
 
 From the [data-wrangling-cheatsheet.pdf](./refs/cheatsheets/data-wrangling-cheatsheet.pdf):
 
   ![](wk04_tidyr/img/data-wrangling-cheatsheet_tidyr.png)
 
 ### tidy CO<sub>2</sub> emissions
+
+
 
 _**Task**. Convert the following table [CO<sub>2</sub> emissions per country since 1970](http://edgar.jrc.ec.europa.eu/overview.php?v=CO2ts1990-2014&sort=des9) from wide to long format and output the first few rows into your Rmarkdown. I recommend consulting `?gather` and you should have 3 columns in your output._
 
@@ -285,10 +280,13 @@ xls = '../data/co2_europa.xls'
 
 print(getwd())
 co2 = read_excel(xls, skip=12)
-co2
+co2 
+  gather(co2 , "year", "co2", 2:46)
 ```
 
 _**Question**. Why use `skip=12` argument in `read_excel()`?_
+
+Because the first 12 lines contain metadata. 
 
 ## dplyr
 
@@ -381,12 +379,12 @@ pollution %>%
   ungroup()
 ```
 
-### multiple groups
+### multiple groups **~~~~~~PROBLEM~~~~~~~~~~**
 
 ```{r multiple groups}
 tb %>%
   group_by(country, year) %>%
-  summarise(cases = sum(cases))
+  mutate(cases = rowSums(child,adult,elderly)) %>%
   summarise(cases = sum(cases))
 ```
 
@@ -417,19 +415,14 @@ See sections in the [data-wrangling-cheatsheet.pdf](./refs/cheatsheets/data-wran
 
 _**Task**. Report the top 5 emitting countries (not World or EU28) for 2014 using your long format table. (You may need to convert your year column from factor to numeric, eg `mutate(year = as.numeric(as.character(year)))`. As with most analyses, there are multiple ways to do this. I used the following functions: `filter`, `arrange`, `desc`, `head`)_. 
 
+```{r top five}
+co2 
+co2=  gather(co2 , "year", "co2", 2:46)
+```
+
+
 _**Task**. Summarize the total emissions by country  (not World or EU28) across years from your long format table and return the top 5 emitting countries. (As with most analyses, there are multiple ways to do this. I used the following functions: `filter`, `arrange`, `desc`, `head`)_. 
 
 
-## joining data
-
-Next week, we'll do a bit on joining data.
-
-## References
-
-### Data Wrangling in R
-
-- [Data Wrangling (dplyr, tidyr) cheat sheet]({{ site.baseurl }}/refs/cheatsheets/data-wrangling-cheatsheet.pdf)
-- [wrangling-webinar.pdf](wrangling-webinar.pdf)
-##4. Answers and Tasks
 
 
