updated join task with lookup country table for co2 to popn

--- a/wk05_joining.Rmd
+++ b/wk05_joining.Rmd
@@ -84,7 +84,7 @@ Again, it is important that you use the exact spelling above. Otherwise, we won'
 
 ## joining data
 
-For this portion of the individual assignment, similar to last week, you'll find it easiest to copy and paste from `## joining data` onwards in  [`env-info/wk05_joining.Rmd`](https://raw.githubusercontent.com/ucsb-bren/env-info/gh-pages/wk05_joining.Rmd) to your `env-info_hw/wk05_ggplot.Rmd`. Then you can play with different chunks of the code. Please be sure to answer all tasks and questions at the bottom.
+For this portion of the individual assignment, similar to last week, you'll find it easiest to copy and paste from `## joining data` onwards in  [`env-info/wk05_joining.Rmd`](https://raw.githubusercontent.com/ucsb-bren/env-info/gh-pages/wk05_joining.Rmd) to your `<user>.github.io/env-info_hw/wk05_ggplot.Rmd`. Then you can play with different chunks of the code. Please be sure to answer all tasks and questions at the bottom.
 
 The R chunks explaining the `dplyr` join functions below are pulled from the excellent [**wrangling-webinar.pdf**](wk03_dplyr/wrangling-webinar.pdf) presentation, which you should consult as you execute (see shortcuts in [rstudio-IDE-cheatsheet.pdf](refs/cheatsheets/rstudio-IDE-cheatsheet.pdf)). 
 
@@ -109,6 +109,8 @@ if (basename(getwd()) != wd){
 ### `bind_cols`
 
 ```{r bind_cols}
+library(dplyr)
+
 y = data.frame(
   x1 = c('A','B','C'), 
   x2 = c( 1 , 2 , 3), 
@@ -194,22 +196,38 @@ _**Task**. Summarize the total emissions by country  (not World or EU28) per cap
 
 _**Task**. Summarize the total emissions by country (not World or EU28) per capita across years from your long format table and return the top 5 emitting countries on **average** across all years._ 
 
-```{r read co2}
-library(dplyr)
+```{r read co2 & popn}
+library(readr)
 library(readxl) # install.packages('readxl')
-
-# xls downloaded from http://edgar.jrc.ec.europa.eu/news_docs/CO2_1970-2014_dataset_of_CO2_report_2015.xls
-xls = '../data/co2_europa.xls'
+library(dplyr)
+library(tidyr)
+library(httr)   # install.packages('httr')
+library(plyr)   # install.packages('plyr')
 
 print(getwd())
+
+# population Excel file
+url = 'http://edgar.jrc.ec.europa.eu/news_docs/CO2_1970-2014_dataset_of_CO2_report_2015.xls'
+out = 'co2_europa.xls'
+if (!file.exists(out)) writeBin(content(GET(url), 'raw'), out)
+
+# country lookup csv file
+url = 'https://raw.githubusercontent.com/ucsb-bren/env-info/gh-pages/data/co2_country_to_popn.csv'
+out = 'co2_country_to_popn.csv'
+if (!file.exists(out)) writeBin(content(GET(url), 'raw'), out)
+
+# read in carbon dioxide emissions file
 co2 = read_excel(xls, skip=12)
-co2
+
+# get lookup table to translate some country names in popn to those in co2 table
+cntry = read_csv('co2_country_to_popn.csv')
+
+# read in population and revalue some country names to match co2 table
+popn = read_csv('https://raw.githubusercontent.com/datasets/population/master/data/population.csv') %>%
+  select(country=`Country Name`, year=Year, popn=Value) %>%
+  mutate(
+    country = plyr::revalue(
+      country, 
+      setNames(cntry$country_co2, cntry$country_popn)))
 ```
 
-```{r popn}
-library(readr)
-library(tidyr)
-
-popn = read_csv(
-  'https://raw.githubusercontent.com/datasets/population/master/data/population.csv')
-```
